syntax = "proto3";
package model;

option go_package = "github.com/binkkatal/proto_user/src/model";

message Activity {
  int32 user_id = 1;
  int32 id = 2;  // Unique ID number for this person.
  enum ActivityType {
    PLAY = 0;
    SLEEP = 1;
    EAT = 2;
    READ = 3;
  }
  enum Status {
    CREATED = 0;
    IN_PROGRESS = 1;
    DONE = 2;
  }
  Status status = 3;
  ActivityType activity_type = 4;
  int64 started_at = 5;
  int64 finished_at = 6;
}
